--- a/section_3/package.json
+++ b/section_3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mysql": "^2.9.0"
   }
 }
