Add mongoose use in project

--- a/section_3/package.json
+++ b/section_3/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "mongoose": "^4.2.7",
     "mysql": "^2.9.0"
   }
 }
